@@ -22,13 +22,13 @@ import com.ssafy.ssafyro.api.service.itKnowledge.request.ItKnowledgeDetailServic
 import com.ssafy.ssafyro.api.service.itKnowledge.request.ItKnowledgeListServiceRequest;
 import com.ssafy.ssafyro.api.service.itKnowledge.response.ItKnowledgeDetailResponse;
 import com.ssafy.ssafyro.api.service.itKnowledge.response.ItKnowledgeListResponse;
-import java.util.Collections;
+import com.ssafy.ssafyro.domain.itknowledge.ItKnowledge;
+import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.http.MediaType;
 import org.springframework.restdocs.payload.JsonFieldType;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
@@ -66,11 +66,20 @@ public class ItknowledgeControllerDocsTest extends RestDocsSupport {
                                 parameterWithName("id").description("IT 지식 ID")
                         ),
                         responseFields(
-                                fieldWithPath("id").type(JsonFieldType.NUMBER).description("IT 지식 ID"),
-                                fieldWithPath("title").type(JsonFieldType.STRING).description("제목"),
-                                fieldWithPath("thumbnailImageUrl").type(JsonFieldType.STRING)
+                                fieldWithPath("success").type(JsonFieldType.BOOLEAN)
+                                        .description("성공 여부"),
+                                fieldWithPath("response").type(JsonFieldType.OBJECT)
+                                        .description("응답"),
+                                fieldWithPath("response.id").type(JsonFieldType.NUMBER)
+                                        .description("IT 지식 ID"),
+                                fieldWithPath("response.title").type(JsonFieldType.STRING)
+                                        .description("제목"),
+                                fieldWithPath("response.thumbnailImageUrl").type(JsonFieldType.STRING)
                                         .description("썸네일 이미지 URL"),
-                                fieldWithPath("articleUrl").type(JsonFieldType.STRING).description("기사 URL")
+                                fieldWithPath("response.articleUrl").type(JsonFieldType.STRING)
+                                        .description("기사 URL"),
+                                fieldWithPath("error").type(JsonFieldType.NULL)
+                                        .description("에러 메시지")
                         )
                 ));
     }
@@ -79,9 +88,15 @@ public class ItknowledgeControllerDocsTest extends RestDocsSupport {
     @Test
     void getItKnowledgeList() throws Exception {
         // given
-        Pageable pageable = PageRequest.of(0, 10, Sort.by("createdDate").descending());
+        ItKnowledge itKnowledge = mock(ItKnowledge.class);
+        given(itKnowledge.getId()).willReturn(1L);
+        given(itKnowledge.getTitle()).willReturn("title");
+        given(itKnowledge.getThumbnailImageUrl()).willReturn("https://thumbnailImageUrl.com");
+        given(itKnowledge.getArticleUrl()).willReturn("https://articleUrl.com");
+
+        Pageable pageable = PageRequest.of(0, 10);
         ItKnowledgeListResponse response = ItKnowledgeListResponse.of(
-                new PageImpl<>(Collections.emptyList(), pageable, 0));
+                new PageImpl<>(List.of(itKnowledge), pageable, 0));
 
         given(itKnowledgeService.getItKnowledgeList(any(ItKnowledgeListServiceRequest.class)))
                 .willReturn(response);
@@ -90,7 +105,6 @@ public class ItknowledgeControllerDocsTest extends RestDocsSupport {
         mockMvc.perform(MockMvcRequestBuilders.get("/api/v1/it-knowledge")
                         .param("page", "0")
                         .param("size", "10")
-                        .param("sort", "createdDate,desc")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andDo(document("get-it-knowledge-list",
@@ -98,13 +112,26 @@ public class ItknowledgeControllerDocsTest extends RestDocsSupport {
                         preprocessResponse(prettyPrint()),
                         queryParameters(
                                 parameterWithName("page").description("페이지 번호"),
-                                parameterWithName("size").description("페이지 크기"),
-                                parameterWithName("sort").description("정렬 방식")
+                                parameterWithName("size").description("페이지 크기")
                         ),
                         responseFields(
-                                fieldWithPath("response").type(JsonFieldType.OBJECT).description("응답"),
-                                fieldWithPath("response.itKnowledgeList").type(JsonFieldType.ARRAY)
-                                        .description("IT 지식 목록")
+                                fieldWithPath("success").type(JsonFieldType.BOOLEAN)
+                                        .description("성공 여부"),
+                                fieldWithPath("response").type(JsonFieldType.OBJECT)
+                                        .description("응답"),
+                                fieldWithPath("response.itKnowledgeList[]").type(JsonFieldType.ARRAY)
+                                        .description("IT 지식 목록"),
+                                fieldWithPath("response.itKnowledgeList[].id").type(JsonFieldType.NUMBER)
+                                        .description("IT 지식 ID"),
+                                fieldWithPath("response.itKnowledgeList[].title").type(JsonFieldType.STRING)
+                                        .description("제목"),
+                                fieldWithPath("response.itKnowledgeList[].thumbnailImageUrl").type(JsonFieldType.STRING)
+                                        .description("썸네일 이미지 URL"),
+                                fieldWithPath("response.itKnowledgeList[].articleUrl").type(JsonFieldType.STRING)
+                                        .description("기사 URL"),
+                                fieldWithPath("error").type(JsonFieldType.NULL)
+                                        .description("에러 메시지")
+
                         )));
     }
 }
